bug 4672, Tweaks to enhance the visibility of inputs on the dialogs.
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@6759 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/rubberducky/skin/colors.css
+++ b/feathers/rubberducky/skin/colors.css
@@ -1242,13 +1242,6 @@ label
   -moz-border-radius: 5px;
 }
 
-/** Make dialog group boxes lighter, since
-    dialogs have darker content areas **/
-dialog:root[type="songbird"] .groupbox-body
-{
-  border-color: #0f100f; /** Groove */
-}
-
 /* class for text with a 'link' appearance */
 .text-link
 {
